--- a/Projeto final 1/home.html
+++ b/Projeto final 1/home.html
@@ -12,12 +12,12 @@
     <nav>
         <ul>
             <li><a id="li1" href="https://www.prks.com.br/barbeariasaobento">Agendar</a></li>
+            <li><img class="imglogo" src="imagens/20201022_b1fadd72-394a-402f-b7f8-2282aedce76f-removebg-preview.png"ref="barbeariasaobento"></li>
             <li><a>Home</a></li>
             <li><a href="serviços.html">Serviços</a></li>
             <li><a href="galeria.html">Galeria</a></li>
             <li><a>Sobre Nós</a></li>
             <li><a href="localização.html">Localização</a></li>
-            <li><img class="img" src="imagens/20201022_b1fadd72-394a-402f-b7f8-2282aedce76f-removebg-preview.png"ref="barbeariasaobento"></li>
             </li>
         </ul>
     </nav>
