--- a/Projeto final 1/galeria.html
+++ b/Projeto final 1/galeria.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="galeria.css">
     <title>Cortes de Cabelo - Barbearia São Bento</title>
     <style>
         body {
@@ -51,7 +52,19 @@
     </style>
 </head>
 <body>
-
+    <div> 
+        <nav>
+            <ul>
+                <li><a id="li1" href="https://www.prks.com.br/barbeariasaobento">Agendar</a></li>
+                <li><img class="imglogo" src="imagens/20201022_b1fadd72-394a-402f-b7f8-2282aedce76f-removebg-preview.png"ref="barbeariasaobento"></li>
+                <li><a>Home</a></li>
+                <li><a href="serviços.html">Serviços</a></li>
+                <li><a href="galeria.html">Galeria</a></li>
+                <li><a>Sobre Nós</a></li>
+                <li><a href="localização.html">Localização</a></li>
+                </li>
+            </ul>
+        </nav>
     <div class="main-header">
         <h1>São Bento Barbearia</h1>
     </div>
