--- a/Projeto final 1/serviços.html
+++ b/Projeto final 1/serviços.html
@@ -26,12 +26,14 @@
         <p>Nossos serviços</p>
         <h1>UMA GAMA SERVIÇOS PREMIUM</h1>
     </div>
-    <div>
-        <button id="servicos" type="button"><img style="height: 300px;" src="imagens/IMG-20240516-WA0041.jpg" alt="imagem"></button>
+    <div >
+        <ul class="container">
+            <a href="https://www.prks.com.br/barbeariasaobento"><li class="servicos"><img style="height: 300px;" src="imagens/IMG-20240516-WA0041.jpg" alt="imagem">CORTES</li></a>
 
-        <button id="servicos" type="button" style="border: none;"><img style="height:300px" src="imagens/340830093_180784754819747_739943560876946576_n (1).jpg" alt="imagem"></button>
-
-        <button id="servicos" type="button"><img style="height:300px" src="" alt="aleatoria"></button>
+            <a href="https://www.prks.com.br/barbeariasaobento"><li class="servicos"><img style="height:300px" src="imagens/340830093_180784754819747_739943560876946576_n (1).jpg" alt="imagem">BARBA</li></a>
+            
+            <a href="https://www.prks.com.br/barbeariasaobento"><li class="servicos"><img style="height:300px" src="imagens/IMG-20240516-WA0048.jpg" alt="aleatoria">ESTÉTICA FACIAL</li></a>
+        </ul>
     </div>
 </body>
 </html>
