--- a/Projeto final 1/galeria.html
+++ b/Projeto final 1/galeria.html
@@ -5,51 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="galeria.css">
     <title>Cortes de Cabelo - Barbearia São Bento</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #313734;
-            color: #f0f0f0;
-            margin: 0;
-            padding: 20px;
-        }
-        .main-header {
-            background-color: #4D3C37;
-            padding: 10px;
-            margin-top: 5px;
-            text-align: center;
-            color: #ffffff;
-        }
-        .header {
-            background-color: #4b2e2e;
-            color: #ffffff;
-            padding: 10px;
-            margin-top: 5px;
-            text-align: center;
-        }
-        .header h2 {
-            margin: 0;
-        }
-        .container {
-            max-width: 900px;
-            margin: 20px auto;
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 20px;
-        }
-        .corte {
-            background-color: #4b2e2e;
-            border: 1px solid #4b2e2e;
-            padding: 20px;
-            text-align: center;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-            color: #ffffff;
-        }
-        .corte img {
-            max-width: 100%;
-            height: auto;
-        }
-    </style>
 </head>
 <body>
     <div> 
@@ -57,7 +12,7 @@
             <ul>
                 <li><a id="li1" href="https://www.prks.com.br/barbeariasaobento">Agendar</a></li>
                 <li><img class="imglogo" src="imagens/20201022_b1fadd72-394a-402f-b7f8-2282aedce76f-removebg-preview.png"ref="barbeariasaobento"></li>
-                <li><a>Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="serviços.html">Serviços</a></li>
                 <li><a href="galeria.html">Galeria</a></li>
                 <li><a>Sobre Nós</a></li>
