--- a/Projeto final 1/home.html
+++ b/Projeto final 1/home.html
@@ -8,20 +8,20 @@
     <title>Barbearia São Bento - Home</title>
 </head>
 <body>
-<div> 
-    <nav>
-        <ul>
-            <li><a id="li1" href="https://www.prks.com.br/barbeariasaobento">Agendar</a></li>
-            <li><img class="imglogo" src="imagens/20201022_b1fadd72-394a-402f-b7f8-2282aedce76f-removebg-preview.png"ref="barbeariasaobento"></li>
-            <li><a>Home</a></li>
-            <li><a href="serviços.html">Serviços</a></li>
-            <li><a href="galeria.html">Galeria</a></li>
-            <li><a>Sobre Nós</a></li>
-            <li><a href="localização.html">Localização</a></li>
-            </li>
-        </ul>
-    </nav>
-</div>
+    <div> 
+        <nav>
+            <ul>
+                <li><a id="li1" href="https://www.prks.com.br/barbeariasaobento">Agendar</a></li>
+                <li><img class="imglogo" src="imagens/20201022_b1fadd72-394a-402f-b7f8-2282aedce76f-removebg-preview.png"ref="barbeariasaobento"></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="serviços.html">Serviços</a></li>
+                <li><a href="galeria.html">Galeria</a></li>
+                <li><a>Sobre Nós</a></li>
+                <li><a href="localização.html">Localização</a></li>
+                </li>
+            </ul>
+        </nav>
+    </div>
     <div style="background-color: #4D3C37; border-radius: 20px; padding: 2px; margin-top: 5px">
         <h1>São Bento Barbearia</h1>
         <h1>A ESCOLHA DOS CAVALHEIROS</h1>
