--- a/Projeto final 1/serviços.html
+++ b/Projeto final 1/serviços.html
@@ -22,7 +22,7 @@
             </ul>
         </nav>
     </div>
-    <div class="barrainfo">
+    <div class="header">
         <p>Nossos serviços</p>
         <h1>UMA GAMA SERVIÇOS PREMIUM</h1>
     </div>
