--- a/Projeto final 1/serviços.html
+++ b/Projeto final 1/serviços.html
@@ -23,16 +23,16 @@
         </nav>
     </div>
     <div class="header">
-        <p>Nossos serviços</p>
+        <h1>Nossos serviços</h1>
         <h1>UMA GAMA SERVIÇOS PREMIUM</h1>
     </div>
     <div >
         <ul class="container">
-            <a href="https://www.prks.com.br/barbeariasaobento"><li class="servicos"><img style="height: 300px;" src="imagens/IMG-20240516-WA0041.jpg" alt="imagem">CORTES</li></a>
+            <a href="https://www.prks.com.br/barbeariasaobento"><li class="servicos"><img style="height: 300px;" src="imagens/IMG-20240516-WA0041.jpg" alt="imagem"><b>CORTES</b></li></a>
 
-            <a href="https://www.prks.com.br/barbeariasaobento"><li class="servicos"><img style="height:300px" src="imagens/340830093_180784754819747_739943560876946576_n (1).jpg" alt="imagem">BARBA</li></a>
+            <a href="https://www.prks.com.br/barbeariasaobento"><li class="servicos"><img style="height:300px" src="imagens/340830093_180784754819747_739943560876946576_n (1).jpg" alt="imagem"><b>BARBA</b></li></a>
             
-            <a href="https://www.prks.com.br/barbeariasaobento"><li class="servicos"><img style="height:300px" src="imagens/IMG-20240516-WA0048.jpg" alt="aleatoria">ESTÉTICA FACIAL</li></a>
+            <a href="https://www.prks.com.br/barbeariasaobento"><li class="servicos"><img style="height:300px" src="imagens/IMG-20240516-WA0048.jpg" alt="aleatoria"><b>ESTÉTICA FACIAL</b></li></a>
         </ul>
     </div>
 </body>
