--- a/avaliacoes.html
+++ b/avaliacoes.html
@@ -15,7 +15,7 @@
                 <!--Botão de "Agendar" em negrito-->
                 <li><a id="li1" href="https://www.prks.com.br/barbeariasaobento"><b>AGENDAR</b></a></li>
                 <li><img class="imglogo" src="imagens/barbearia-logo.png"ref="barbeariasaobento"></li>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="serviços.html">Serviços</a></li>
                 <li><a href="galeria.html">Galeria</a></li>
                 <li><a href="about.html">Sobre Nós</a></li>
